// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select: Component should render correctly 1`] = `
<div
  style={
    Object {
      "color": "#FFF",
      "display": "flex",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "cursor": "pointer",
        "display": "flex",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "pointer",
          "display": "flex",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "cursor": "pointer",
            "overflow": "hidden",
            "textOverflow": "ellipsis",
            "whiteSpace": "nowrap",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "WebkitOverflowScrolling": "touch",
          "backgroundColor": "#1d1d20",
          "display": "block",
          "flexDirection": "column",
          "left": "0",
          "maxHeight": "184px",
          "overflowY": "auto",
          "position": "absolute",
          "top": "calc(100% + 5px)",
          "width": "100%",
          "zIndex": 99,
        }
      }
    >
      <div
        id="select-item-0"
        key="0"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "border": "1px solid  #2F2F36",
            "borderTop": "1px solid  #2F2F36",
            "color": "#71737e",
            "cursor": "pointer",
            "overflow": "hidden",
            "padding": "20px 10px",
            "textOverflow": "ellipsis",
            "whiteSpace": "nowrap",
          }
        }
      >
        Dolphin
      </div>
      <div
        id="select-item-1"
        key="1"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "border": "1px solid  #2F2F36",
            "borderTop": "none",
            "color": "#71737e",
            "cursor": "pointer",
            "overflow": "hidden",
            "padding": "20px 10px",
            "textOverflow": "ellipsis",
            "whiteSpace": "nowrap",
          }
        }
      >
        Dog
      </div>
      <div
        id="select-item-2"
        key="2"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "border": "1px solid  #2F2F36",
            "borderTop": "none",
            "color": "#71737e",
            "cursor": "pointer",
            "overflow": "hidden",
            "padding": "20px 10px",
            "textOverflow": "ellipsis",
            "whiteSpace": "nowrap",
          }
        }
      >
        Parrot
      </div>
      <div
        id="select-item-3"
        key="3"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "border": "1px solid  #2F2F36",
            "borderTop": "none",
            "color": "#71737e",
            "cursor": "pointer",
            "overflow": "hidden",
            "padding": "20px 10px",
            "textOverflow": "ellipsis",
            "whiteSpace": "nowrap",
          }
        }
      >
        Cat
      </div>
      <div
        id="select-item-4"
        key="4"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "border": "1px solid  #2F2F36",
            "borderTop": "none",
            "color": "#71737e",
            "cursor": "pointer",
            "overflow": "hidden",
            "padding": "20px 10px",
            "textOverflow": "ellipsis",
            "whiteSpace": "nowrap",
          }
        }
      >
        Alligator
      </div>
      <div
        id="select-item-5"
        key="5"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "border": "1px solid  #2F2F36",
            "borderTop": "none",
            "color": "#71737e",
            "cursor": "pointer",
            "overflow": "hidden",
            "padding": "20px 10px",
            "textOverflow": "ellipsis",
            "whiteSpace": "nowrap",
          }
        }
      >
        Spider
      </div>
    </div>
  </div>
</div>
`;

exports[`Select: Component should render correctly with native 1`] = `
<div
  style={
    Object {
      "color": "#FFF",
      "display": "flex",
      "width": "100%",
    }
  }
>
  <select
    onChange={[Function]}
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <option
      key="0"
      value="dolphin"
    >
      Dolphin
    </option>
    <option
      key="1"
      value="dog"
    >
      Dog
    </option>
    <option
      key="2"
      value="parrot"
    >
      Parrot
    </option>
    <option
      key="3"
      value="cat"
    >
      Cat
    </option>
    <option
      key="4"
      value="alligator"
    >
      Alligator
    </option>
    <option
      key="5"
      value="spider"
    >
      Spider
    </option>
  </select>
</div>
`;

exports[`Select: Component should render correctly with placeholder 1`] = `
<div
  style={
    Object {
      "color": "#FFF",
      "display": "flex",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "cursor": "pointer",
        "display": "flex",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "pointer",
          "display": "flex",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "cursor": "pointer",
            "overflow": "hidden",
            "textOverflow": "ellipsis",
            "whiteSpace": "nowrap",
          }
        }
      >
        Select one
      </div>
    </div>
    <div
      style={
        Object {
          "WebkitOverflowScrolling": "touch",
          "backgroundColor": "#1d1d20",
          "display": "block",
          "flexDirection": "column",
          "left": "0",
          "maxHeight": "184px",
          "overflowY": "auto",
          "position": "absolute",
          "top": "calc(100% + 5px)",
          "width": "100%",
          "zIndex": 99,
        }
      }
    >
      <div
        id="select-item-0"
        key="0"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "border": "1px solid  #2F2F36",
            "borderTop": "1px solid  #2F2F36",
            "color": "#71737e",
            "cursor": "pointer",
            "overflow": "hidden",
            "padding": "20px 10px",
            "textOverflow": "ellipsis",
            "whiteSpace": "nowrap",
          }
        }
      >
        Dolphin
      </div>
      <div
        id="select-item-1"
        key="1"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "border": "1px solid  #2F2F36",
            "borderTop": "none",
            "color": "#71737e",
            "cursor": "pointer",
            "overflow": "hidden",
            "padding": "20px 10px",
            "textOverflow": "ellipsis",
            "whiteSpace": "nowrap",
          }
        }
      >
        Dog
      </div>
      <div
        id="select-item-2"
        key="2"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "border": "1px solid  #2F2F36",
            "borderTop": "none",
            "color": "#71737e",
            "cursor": "pointer",
            "overflow": "hidden",
            "padding": "20px 10px",
            "textOverflow": "ellipsis",
            "whiteSpace": "nowrap",
          }
        }
      >
        Parrot
      </div>
      <div
        id="select-item-3"
        key="3"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "border": "1px solid  #2F2F36",
            "borderTop": "none",
            "color": "#71737e",
            "cursor": "pointer",
            "overflow": "hidden",
            "padding": "20px 10px",
            "textOverflow": "ellipsis",
            "whiteSpace": "nowrap",
          }
        }
      >
        Cat
      </div>
      <div
        id="select-item-4"
        key="4"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "border": "1px solid  #2F2F36",
            "borderTop": "none",
            "color": "#71737e",
            "cursor": "pointer",
            "overflow": "hidden",
            "padding": "20px 10px",
            "textOverflow": "ellipsis",
            "whiteSpace": "nowrap",
          }
        }
      >
        Alligator
      </div>
      <div
        id="select-item-5"
        key="5"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "border": "1px solid  #2F2F36",
            "borderTop": "none",
            "color": "#71737e",
            "cursor": "pointer",
            "overflow": "hidden",
            "padding": "20px 10px",
            "textOverflow": "ellipsis",
            "whiteSpace": "nowrap",
          }
        }
      >
        Spider
      </div>
    </div>
  </div>
</div>
`;
